language/move-model/tests/sources/variables_ok.exp
error:

   ┌── tests/sources/variables_ok.move:9:20 ───
   │
 9 │     invariant pack sum = sum + x;
   │                    ^^^ Unexpected 'sum'
   ·
 9 │     invariant pack sum = sum + x;
   │                    --- Expected ';'
   │
